            ARMV7: OMAP: add convenience function to set TWL4030 regulator voltages
            ARMV7: OMAP: Enable input driver on Overo's MMC1_CLK and MMC3_CLK pinmux setup
            ARMV7: OMAP: Add mpurate boot arg for Overo and Beagle
            ARMV7: OMAP: Add board revision detection for Overo
            ARMV7: OMAP: Add detection and support for Beagle C4 revision
            ARMV7: OMAP: Configure Overo's second network chip
            ARMV7: OMAP3: Update CPU type detection for AM35XX/OMAP36XX/37XX
            ARMV7: OMAP3: Add clock setup for OMAP36XX/37XX
            ARMV7: OMAP3: sdrc: remove hard coding sdram setup for 128MB/bank
            mtd: nand: honor CONFIG_SYS_NAND_QUIET_TEST with unknown NAND printk
            ARMV7: OMAP3: Add CONFIG_SYS_NAND_QUIET_TEST to Beagle and Overo configs
            ARMV7: OMAP3: Add support for Beagle xM
            ARMV7: OMAP: Add spi driver for OMAP3/OMAP4
            NET: Add driver for Micrel KS8851
            ARMV7: Add Micrel KS8851 net chip support to OMAP4430 SDP
  * Same versatile express patches from Matt Waddel as before.

 -- John Rigby <john.rigby@linaro.org>  Mon, 23 Aug 2010 22:54:44 -0600

u-boot-linaro (v2010.06-265-gcdb7497-linaro-1) maverick; urgency=low

  * Initial Linaro u-boot tree based on

  * Upstream v2010.06-265-gcdb7497

  * A series of patches from ssakomans exp branch that add
    support for beagle C4 and xM.  These have been rebased
    onto current upstream.  The gitorious beagle trees are
    still based on v2010.03.  These patches will be replaced
    with patches from ssakoman.

  * Versatile express patches from Matt Waddel.

  * Debian packaging by John Rigby based on the lucid
    u-boot-omap3 package.

  * Currently builds u-boot binaries for these platforms
    ca9x4_ct_vxp        aka Versatile Express
    mx51evk             aka Babbage
    omap4_panda
    omap3_beagle

 -- John Rigby <john.rigby@linaro.org>  Fri, 06 Aug 2010 16:20:43 -0600