@@ -25,6 +25,7 @@ u-boot-linaro (v2010.06-695-gbd23130-linaro-2) lucid; urgency=low
             NET: Add driver for Micrel KS8851
             ARMV7: Add Micrel KS8851 net chip support to OMAP4430 SDP
   * Same versatile express patches from Matt Waddel as before.
+  * Updated packaging to include platform specific install targets
 
  -- John Rigby <john.rigby@linaro.org>  Mon, 23 Aug 2010 22:54:44 -0600
 
